remove blur effect to avoid blurred border

--- a/css/master.scss
+++ b/css/master.scss
@@ -15,8 +15,8 @@ body {
                                            rgba(118, 171, 207, 1) 68%,
                                            rgba(60,  148, 170, 1) 100%);
   background-repeat: round;
-  -webkit-filter: brightness(.9) blur(20px);
-  filter: brightness(.9) blur(20px);
+  -webkit-filter: brightness(.9);
+  filter: brightness(.9);
 }
 .wrapper {
   mix-blend-mode: screen;
